2010-03-26 Ian Rutt
 * libglide/glide_thck.F90: refactored findsums (taken outside thck_evolve)

2010-03-24 Magnus Hagdorn
 * libglide/glide_velo.F90: refactored chckwvel

2010-03-24 Magnus Hagdorn
 * libglide/glide.F90: use new API
 * libglide/glide_velo.F90: refactor calc_btrc

2010-03-24 Magnus Hagdorn
 * libglide/glide.F90: use new API
 * libglide/glide_velo.F90: refactor wvel_ew and calc_basal_shear

2010-02-24 Magnus Hagdorn
 * libglide/glide_velo.F90: refactor wvelintg

2010-02-24 Magnus Hagdorn
 * libglide/glide_velo.F90: refactor zerovelo and gridwvel
 
2010-02-19 Magnus Hagdorn
 * libglide/glide_thck.F90: use new dummy params for slipvelo
 * libglide/glide_types.F90: move dthckdtm and dusrfdtm to velo_type
 * libglide/glide_vars.def: new location for dusrfdtm
 * libglide/glide_velo.F90: refactor slipvelo, first go at refactoring
   gridwvel and chckwvel
 * libglide/velo_types.F90: add ice_grid coord system, add dthckdtm and 
   dusrfdtm

2010-02-17 Magnus Hagdorn
 * libglide/Makefile.am: add convinience library for velocity computations
 * libglide/glide.F90: new API for init_velo; call flow law initialisation
   procedure directly
 * libglide/glide_setup.F90: allocate memory for sigma coords here
 * libglide/glide_types.F90: get velo type from its own module; flowlaw type
   has its own entry
 * libglide/glide_velo.F90: refactor init_velo
 * libglide/velo_types.F90: new module for handling velocity computations work
   arrays

2010-02-12 Magnus Hagdorn
 * libglide/lithot.F90: do not load glide_types module
 * libglide/lithot1d.F90: ditto

2010-02-01 Ian Rutt
 * configure.in: extended allocatable/pointer macros to allow pointer
	initialisation to null
 * libglide/glide_types.F90: began using pointer initialisation macro, as
	a test

2010-01-20 Magnus Hagdorn
 * libglide/lithot.F90: remove glide_global_type from argument list and replace
   with individual fields
 * libglide/lithot1d.F90: ditto
 * example-drivers/eis/src/eis_glide.F90: adjust API